# advanced_techniques_for_curvefitting

./: .gitignore  CMakeLists.txt  README.md  align3d2d.cpp  align3d3d.cpp  align3d3d_with_covariance.cpp  align_with_mocap.cpp  hello-ceres.cpp  hello.cpp  line_fitting.cpp  quadratic_fit.cpp  utilities.h
plotting/: plot3d.py  plot3d_debug.py  plot_line.py  plot_perspective.py  plot_quadratic.py
